do not allow game to continue of game ends!

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <div id="leftColumn">
         <div id='play'> Play <span class = 'playerOneFont' id='player'>Red</span> </div>
-        <div id='play'> Play <span class = 'playerOneFont' id='player'>Red</span> </div>
+        <div id='playOver'></div>
     </div>
     <div class="container">
         <table class="game">
