refactor winning combinations further and update jasmine testing

--- a/index.html
+++ b/index.html
@@ -18,11 +18,11 @@
     <div class="container">
         <table class='game'></table>
     </div>
-    <script src='jasmine/jasmine.js'></script>
+    <!-- <script src='jasmine/jasmine.js'></script>
     <script src='jasmine/jasmine-html.js'></script>
-    <script src='jasmine/boot.js'></script>
+    <script src='jasmine/boot.js'></script> -->
     <script src='app.js'></script>
-    <script src='app.test.js'></script>
+    <!-- <script src='app.test.js'></script> -->
 </body>
 
 </html>
